# bbf

./: .gitignore  .trivyignore  CLAUDE.md  DEMO.md  DEPLOYMENT.md  README.md  REPOSITORY_DOCUMENTATION.md  docker-compose.yml  start.sh
.github/workflows/: security-scan.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.minimal  README.md  eslint.config.js  package-lock.json  package.json
backend/src/: index.js  logger.js  loki-transport.js  vault.js
backend/src/middleware/: auth.js
backend/src/routes/: auth.js  products.js
backend/src/services/: solana.js
falco/: falco.yaml
falco/rules/: custom_rules.yaml
frontend/: .dockerignore  .env.example  Dockerfile  Dockerfile.minimal  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: ProductManager.jsx
grafana/dashboards/: application-logs.json  security-monitoring.json
grafana/provisioning/dashboards/: dashboard.yml
loki/: loki-config.yml  promtail-config.yml
nginx/: Dockerfile  modsecurity.conf  nginx.conf  scanner-user-agents.data
opa/policies/: api_authz.rego  container_authz.rego
solana-program/: Cargo.toml  README.md
solana-program/src/: lib.rs
vault/config/: vault-config.hcl
vault/policies/: app-policy.hcl
vault/scripts/: init-vault.sh
