[package]
name = "product-provenance"
version = "0.1.0"
edition = "2021"
description = "Solana program for blockchain-based product provenance tracking"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.17"
borsh = "0.10.3"
borsh-derive = "0.10.3"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.17"
solana-sdk = "1.17"
tokio = { version = "1.35", features = ["full"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
